# 2KyrsLABA3

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml
include/: 1DirectionList.h  2DirectionList.h  MyVector.h
